tests/src/frontend/typechecking/invalid/unbound_field_mutable.sk
mutable class A(mutable x: Int) {
  readonly fun y(): void {
    void
  }
}

fun test(a: mutable A): void {
  a.z
}
